# MatMulProfiling

./: CMakeLists.txt  README.md
Statistics/: Cache_misses_statistic.txt  cachegrind.out.9514  cachegrind.out.9675
src/: main.cpp
